[package]
name = "nod"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"


[dependencies]
clap = "2"
reqwest = "0.9.18"
#rustc-serialize = "0.3"
libarchive = "0.1.1"
url = "1.7.2"
colored = "1.8"
pbr = "1.0"
dirs = "2.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[lib]
name = "nod"
path = "src/nod/lib.rs"
test = false

[[bin]]
name = "nodester"
path = "src/nod-cli/main.rs"

[profile.release]
lto = true

[package.metadata.deb]
name = "nodester"
section = "utility"
priority = "optional"
extended-description = "Node version manager"